--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 .arc {
@@ -55,7 +56,7 @@ body {
   height: 200%;
   border-radius: 50%;
   transform: skewX(0deg);
-  content: '';
+  content: "";
 }
 
 .circle {
